# taskmaster

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.rs  config.toml  install.sh  ls.toml  requirement.txt  task.toml  taskmaster.service
configs/: example.toml  example.yml  minimal.toml  restart.yml  with_autostart.toml  with_env.toml  with_env.yml  with_exitcodes.toml  with_numprocess.toml  with_output.yml  with_relaunch.toml  with_restart.toml  with_restart.yml  with_retry.toml  with_stderr.toml  with_stdout.toml  with_stop.yml  with_stopdelay.toml  with_stopsignal.toml  with_successdelay.toml  with_uid_gid.yml  with_umask.toml  with_umask.yaml  with_umask.yml  with_workingdir.toml
features/: basic-client.feature  config.feature  config_harden.feature  environment.py  fixture_lib.py  server_command.feature  server_harden.feature  state_nightmare.feature  unexpected_behavior.feature
features/steps/: assert_utils.py  assert_utils_test.py  client_command.py  given.py  then.py  when.py  when_client_mock.py
res/: config.toml
src/: cli.rs  client.rs  config.rs  config_watcher.rs  editor.rs  error.rs  history.rs  main.rs  reader.rs  server.rs  signal.rs  state.rs  task.rs  watcher.rs  worker.rs
src/client/: editor.rs  history.rs  mod.rs
src/server/: communication.rs  default.rs  error.rs  formatter.rs  inter.rs  listener.rs  manager.rs  message.rs  mod.rs  monitor.rs  nix_utils.rs  reader.rs  relaunch.rs  signal.rs  state.rs  task.rs  wait_children.rs  waiter.rs  watcher.rs  worker.rs
src/shared/: error.rs  logger.rs  message.rs  (+1 more)
(+12 files in other folders)
