[package]
name = "taskmaster"
version = "0.1.0"
authors = ["Cedric M'Passi <cedricmpassi@gmail.com>", "Apolline Saint-Mleux <apsaint-@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clap = "~2.27.0"
termion = "1"
regex = "1"
signal-hook = "0.3.8"
log = { version = "0.4.14", features = ["std"] }
nix = "0.20.0"
